Webpack added to replace Parcel for UMD purposes

--- a/example/index.html
+++ b/example/index.html
@@ -181,7 +181,7 @@
         </tr>
       </tbody>
     </table>
-    <script src="../lib/index.js"></script>
-    <script>generateSortableTables()</script>
+    <script src="../lib/sortablejs.js"></script>
+    <script>sortablejs()</script>
 </body>
 </html>
